# L-THREAD-Liminal-Thread-Secure-Protocol-LTP-

./: .gitignore  .markdownlint.json  API.md  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT.md  GOVERNANCE.md  INVESTOR_PITCH.md  Makefile  NEXT_STEPS.md  PROJECT_ANALYSIS.md  PROJECT_MAP.md  README.geometry.md  README.md  SECURITY.md  SECURITY_HARDENING.md  SECURITY_SYNC_STATUS.md  STATUS.md  VERSION.md  WHITEPAPER.md  compliance_report.json  docker-compose.yml  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json
.github/: PULL_REQUEST_TEMPLATE.md  SECURITY.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: rfc-proposal.yml
.github/workflows/: docs-check.yaml  gh-pages.yml  inspect-deep.yml  test.yml
adapters/: README.md
adapters/autogpt/: index.ts
adapters/crewai/: index.ts
adapters/langchain/: index.ts
adoption/: LTP-Adoption-Playbook-v0.1.md
agents/reference-agent/: adapter.ts  config.ts  enforcement.ts  (+4 more)
benchmarks/: README.md  run_cross_language.sh
canonical/: README.md  checks.md  compliance-checklist.md  pr233-review.md  trace.v0.1.json
deploy/: Caddyfile  docker-compose.yml  prometheus.yml
docs/: Commercial-Use-Note.md  GLOSSARY_LTP_v0.1.md  Geometry-of-Meaning-Concept.md  INDEX.md  LTP-Adoption-Guide.md  LTP-Core-vs-Extensions.md  LTP-OPEN-QUESTIONS.md  LTP-PHILOSOPHY.md  LTP-Positioning.md  LTP-Protocol-Formal-Review.md  LTP-Services.md  MARKET_NARRATIVE_LTP_v0.1.md  PITCH-Geometry-of-Meaning.md  PITCH_ONE_PAGER_LTP_v0.1.md  README_PROTOCOL_PACK.md  WHITEPAPER_LTP_v0.1.md  Who-Is-LTP-For.md  evolution.md  glossary.md  invariants.md  ltp_node_operational_audit.md  orientation-invariants.md  rust-node-ops.md  specification-index.md  visual-geometry.txt
economics/: LTP-Economics-and-Market-Roles-v0.1.md
examples/: README.canonical-flow.md  canonical-flow.ts  exec_causal_log.jsonl  presentation.html
examples/rust-advanced/: Cargo.toml  README.md  concurrent_client.rs  production_client.rs
examples/rust-server/: Cargo.toml  README.md
examples/rust-server/src/: main.rs
governance/: ADVISORY_BOARD.md  Advisory-Board.md  DECISION_RECORD_TEMPLATE.md  Decision-Process.md  GOVERNANCE.md  LTP-Conformance-Badges-v0.1.md  LTP-Governance-and-RFC-v0.1.md  LTP-Governance.md  LTP-Neutrality.md  LTP-RFC-Process.md  LTP-Versioning.md  MAINTAINERS.md  README.md  RELEASE_POLICY.md  RFC-Process.md  RFC_TEMPLATE.md
market/: agent-coordination.md  edge-infrastructure.md  streaming-recommendation.md
nodes/ltp-rust-node/: Cargo.toml
nodes/ltp-rust-node/src/: main.rs  node.rs  protocol.rs  state.rs  tests.rs  trace.rs
positioning/: LTP-MARKET-POSITIONING-v0.1.md  LTP-vs-Existing-Paradigms-v0.1.md
rfc/: LTP-RFC-v0.1.md  README.md
samples/: golden.trace.json  golden.trace.jsonl
schemas/: ltp-conformance-report.v0.1.json  ltp-critical-actions.v0.1.json  ltp-fintech-compliance-report.v0.1.json
scripts/: check-agents-safety.sh  check-bidi.sh  check-compliance.sh  check-no-bidi.mjs  ci-guardrail.sh  generate-agent-safety-traces.js  generate-agent-traces.ts  generate-content-traces.js  generate-failure-recovery-trace.js  generate-golden-trace.js  tsconfig.verify.json  verify-golden-trace.sh
sdk/rust/ltp-client/: Cargo.toml  README.md
sdk/rust/ltp-client/examples/: minimal_client.rs
sdk/rust/ltp-client/src/: client.rs  crypto.rs  error.rs  lib.rs  types.rs
sdk/rust/ltp-client/tests/: integration_test.rs
site/: index.md
specs/: GLOSSARY.md  Geometry-Math-Core.md  LTP-ADOPTION-v0.1.md  LTP-Adoption-Guardrails-v0.1.md  LTP-Adoption-Profiles-v0.1.md  LTP-Canonical-Flow-v0.1.md  LTP-Conformance-Endpoint-v0.1.md  LTP-Conformance-Report-v0.1.md  LTP-Conformance-v0.1.md  LTP-ConsciousnessWeb-Visualization.md  LTP-ConsciousnessWeb.md  LTP-Core-Conformance-Checklist.md  LTP-Flow-v0.1.md  LTP-Frames-v0.1.md  LTP-Geometry-v1.md  LTP-Governance-v0.1.md  LTP-Governance.md  LTP-Liminal-Web-Overview.md  LTP-RFC-Process.md  LTP-Reference-Scenarios-v0.1.md  LTP-SelfTest-v0.1.md  LTP-Spec-v0.1.md  LTP-THINKS-v0.1.md  LTP-ThreadLifeModel.md  LTP-What-It-Is-Not.md  LTP-Why-Engineers-Abort.md  LTP-core.md  LTP-handshake.md  LTP-message-format.md  LTP-toon.md  LTP-v0.1-RC1.md  LTP-v0.1-Release-Checklist.md  LTP-v0.1-Release-Slice.md  LTP-v0.1-Release.md  LiminalOS-Integration.md  README.md  TurtleOrientation.md
tests/: README.md  temporal-multipath.test.ts  turtleBridge.test.ts
vcml/: FORMAT.md
(+456 files in other folders)
