[package]
name = "ltp-rust-node"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35", features = ["full"] }
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
uuid = { version = "1.6", features = ["v4"] }

[dev-dependencies]
tokio = { version = "1.35", features = ["full"] }
