[package]
name = "ltp-rust-node"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
axum = "0.7"
dashmap = "5"
futures-util = "0.3"
prometheus = "0.13"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35", features = ["full"] }
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1.6", features = ["v4"] }
http = "1"
sha2 = "0.10.9"
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
hex = "0.4"
ipnet = "2.9"

[dev-dependencies]
tempfile = "3.23.0"
tokio = { version = "1.35", features = ["full"] }
