[package]
name = "ltp-client"
version = "0.1.0"
edition = "2021"
authors = ["LIMINAL Team"]
description = "LTP (Liminal Thread Protocol) client SDK for Rust"
license = "MIT"
repository = "https://github.com/safal207/L-THREAD-Liminal-Thread-Secure-Protocol-LTP-"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
uuid = { version = "1.6", features = ["v4", "serde"] }
futures-util = "0.3"
url = "2.5"

[dev-dependencies]
tokio-test = "0.4"

[[test]]
name = "integration_test"
path = "tests/integration_test.rs"

